2001-01-23  Tom Yu  <tlyu@mit.edu>

	* forward.c (rd_and_store_for_creds): Overwrite any existing value
	of the KRB5CCNAME environment variable.

2001-01-16  Ken Raeburn  <raeburn@mit.edu>

	* krcp.c (error): Always declare with ellipsis.

2001-01-13  Sam Hartman  <hartmans@mit.edu>

	* configure.in: Force SunOS to not use termios.

2001-01-12  Sam Hartman  <hartmans@mit.edu>

	* krlogin.c: Previously, we only used TIOCGLTC  on systems with
	termios.  This is sort of silly since its a BSD 4.[23] IOCTL.  We
	then go out of our way not to use it on IRIX, Solaris or HPUX.  I
	think all this comes about because you really want to use BSD
	IOCTLS on Sunos rather than termios.  I propose to do that and
	never use BSD IOCTLs on Sunos.


2000-12-15  Ken Raeburn  <raeburn@mit.edu>

	* krlogin.c (main): Add new "-4" option, to use krb4
	authentication only; useful for testing.
	* rlogin.M: Updated.

2000-12-06  Ken Raeburn  <raeburn@mit.edu>

	* krlogind.c (doit): Cast first argument to pty_make_sane_hostname
	to sockaddr pointer.
	* krshd.c (doit): Likewise.

2000-11-01  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Update to autoconf 2 macro names:
	AC_FORK->AC_FUNC_VFORK, AC_CONST->AC_C_CONST, AC_HEADER_CHECK ->
	AC_CHECK_HEADER. In addition, conditionally use internal
	AC_PROG_ECHO_N (autoconf 2.12) or _AC_PROG_ECHO (autoconf 2.49)
	depending on which is defined.

2000-10-12  Ezra Peisach  <epeisach@mit.edu>

	* login.c (k5_get_password): Declare second argument as unsigned
	int length.

Tue Oct 10 04:59:04 2000  Ezra Peisach  <epeisach@mit.edu>

	* kcmd.c (kcmd): Use krb5_set_principal_realm() instead of freeing the
	principals realm data and mucking with it ourselves.

2000-10-03  Ezra Peisach  <epeisach@mit.edu>

	* krlogin.c (main): Declare main as int.

2000-09-08  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (DEFINES): Define HEIMDAL_FRIENDLY.
	* krlogind.c (recvauth): Don't complain about a subkey sent for